--- a/settings.gradle
+++ b/settings.gradle
@@ -104,6 +104,7 @@ include 'ledger'
 include 'membership'
 include 'membership-identity'
 include 'packaging'
+include 'packaging:packaging-avro-converters'
 include 'packaging:test:contract-cpk'
 include 'packaging:test:workflow-cpk'
 include 'persistence'
