--- a/ledger/build.gradle
+++ b/ledger/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 
     api project(":application")
     implementation project(":crypto")
+    implementation project(":membership")
+    implementation project(":membership-identity")
     implementation project(":serialization")
     implementation project(":persistence")
 
