--- a/membership-identity/build.gradle
+++ b/membership-identity/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compileOnly 'org.osgi:osgi.annotation'
 
     api project(':base')
+    implementation project(":membership")
 
     implementation "org.bouncycastle:bcprov-jdk15on:$bouncycastleVersion"
 }
