--- a/settings.gradle
+++ b/settings.gradle
@@ -103,6 +103,7 @@ include 'data:topic-schema'
 include 'data:db-schema'
 include 'ledger'
 include 'membership'
+include 'membership-conversion'
 include 'membership-identity'
 include 'packaging'
 include 'packaging:packaging-avro-converters'
