--- a/ledger/build.gradle
+++ b/ledger/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     api project(":application")
     implementation project(":crypto")
     implementation project(":membership")
+    implementation project(":membership-conversion")
     implementation project(":membership-identity")
     implementation project(":serialization")
     implementation project(":persistence")
