--- a/packaging/packaging-avro-converters/build.gradle
+++ b/packaging/packaging-avro-converters/build.gradle
@@ -6,6 +6,7 @@ plugins {
 
 
 dependencies {
+    compileOnly "org.osgi:osgi.annotation"
     implementation project(":packaging")
     implementation project(":data:avro-schema")
 }
