--- a/corda-api/build.gradle
+++ b/corda-api/build.gradle
@@ -14,6 +14,7 @@ dependencies {
         api project(':crypto')
         api project(':data:avro-schema')
         api project(':data:topic-schema')
+        api project(':data:db-schema')
         api project(':ledger')
         api project(':membership')
         api project(':membership-identity')
