NOTICK Port `:application` Java API tests

--- a/membership-identity/build.gradle
+++ b/membership-identity/build.gradle
@@ -15,4 +15,6 @@ dependencies {
     api project(':base')
 
     implementation "org.bouncycastle:bcprov-jdk15on:$bouncycastleVersion"
+
+    testImplementation "org.assertj:assertj-core:$assertjVersion"
 }
