--- a/serialization/build.gradle
+++ b/serialization/build.gradle
@@ -13,4 +13,6 @@ dependencies {
     implementation 'net.corda.kotlin:kotlin-stdlib-jdk8-osgi'
 
     compileOnly 'org.osgi:osgi.annotation'
+
+    testImplementation "org.assertj:assertj-core:$assertjVersion"
 }
