CORE-2650: Add in schema structure for virtual node configuration

--- a/settings.gradle
+++ b/settings.gradle
@@ -99,8 +99,9 @@ include 'corda-api'
 include 'cordapp-configuration-publish'
 include 'crypto'
 include 'data:avro-schema'
-include 'data:topic-schema'
+include 'data:config-schema'
 include 'data:db-schema'
+include 'data:topic-schema'
 include 'ledger'
 include 'membership'
 include 'membership-conversion'
