--- a/build.gradle
+++ b/build.gradle
@@ -254,3 +254,9 @@ subprojects {
         }
     }
 }
+
+wrapper {
+    gradleVersion = '7.2'
+    distributionType = Wrapper.DistributionType.BIN
+    distributionUrl="https://gradleproxy:gradleproxy@software.r3.com/artifactory/gradle-proxy/gradle-$gradleVersion-bin.zip"
+}
