NOTICK package signature POC

--- a/settings.gradle
+++ b/settings.gradle
@@ -107,6 +107,7 @@ include 'membership'
 include 'membership-conversion'
 include 'membership-identity'
 include 'packaging'
+include 'packaging:signature-demo'
 include 'packaging:packaging-avro-converters'
 include 'packaging:test:contract-cpk'
 include 'packaging:test:workflow-cpk'
