--- a/build.gradle
+++ b/build.gradle
@@ -137,15 +137,6 @@ subprojects {
         apply plugin: 'kotlin-jpa'
 
         configurations {
-            all {
-                resolutionStrategy {
-                    dependencySubstitution {
-                        // Replace any Logback SLF4J back-end with Log4J2.
-                        substitute module('ch.qos.logback:logback-classic') using module("org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion")
-                    }
-                }
-            }
-
             [ compileClasspath, testCompileClasspath, runtimeClasspath, testRuntimeClasspath ].forEach { cfg ->
                 configureKotlinForOSGi(cfg)
             }
@@ -243,6 +234,9 @@ subprojects {
 
         task.dependsOn tasks.withType(AbstractCompile)
     }
+
+    task allDependencyInsight(type: DependencyInsightReportTask) {}
+    task allDependencies(type: DependencyReportTask) {}
 }
 
 // report updatable dependencies: gradle dependencyUpdates
