INFRA-1685 Enable build cache

--- a/gradle.properties
+++ b/gradle.properties
@@ -61,3 +61,7 @@ mockitoKotlinVersion = 4.0.0
 bndVersion = 6.1.0
 osgiVersion = 8.0.0
 osgiScrAnnotationVersion = 1.4.0
+
+# Enable gralde build cahe for CI builds
+org.gradle.caching=true
+gradle.cache.push=false
