--- a/data/config-schema/src/main/resources/net/corda/schema/configuration/corda.boot.conf
+++ b/data/config-schema/src/main/resources/net/corda/schema/configuration/corda.boot.conf
@@ -1,6 +1,29 @@
-corda {
-    # bootstrap parameters - ONLY for accessing the rest of the configuration
-    # these will generally be provided via a command line or environment provided to the process
-    boot {
+# Configuration schema under corda.boot key.
+
+# Messaging configuration to connect to the bus and retrieve the rest of the config. Note that this section
+# mirrors the configuration under the messaging key. Subsequent connections to the bus use a merger of this
+# config and the main messaging config.
+messaging {
+    bus {
+        # Could be DATABASE, KAFKA or INMEMORY
+        type = "KAFKA"
+        properties {
+            # Use standard Kafka configuration properties
+        }
+        # properties {
+            # When DATABASE
+            # jdbcUrl = "<>"
+            # username = "admin"
+            # passwordSecret = "..."
+        # }
     }
+}
+
+# The instance ID of this particular worker. Should be unique across instances of the same worker type.
+instanceID = 1
+# Topic configuration. Primarily used to ensure that this worker connects to the correct set of topics on the message
+# bus broker.
+topic {
+    # Global prefix to apply to all topics when subscribing to the bus.
+    prefix = ""
 }
