CORE-3210: Further tweaks to public configuration

--- a/data/config-schema/src/main/resources/net/corda/schema/configuration/corda.boot.conf
+++ b/data/config-schema/src/main/resources/net/corda/schema/configuration/corda.boot.conf
@@ -7,8 +7,28 @@ messaging {
     bus {
         # Could be DATABASE, KAFKA or INMEMORY
         type = "KAFKA"
+        # Reflects the corresponding block in the messaging section. When both are available, the messaging section
+        # takes precedence. Note when connecting to the bus to retrieve the configuration, only the boot config is
+        # available. This must therefore be complete enough to establish a connection to the bus.
         properties {
-            # Use standard Kafka configuration properties
+            # Settings that apply equally to both consumers and producers. These are likely to be security settings which
+            # are similar in both cases. Properties here will be merged into properties in the consumers and producers
+            # blocks. If a property is specified in both, the property in the consumers/producers block takes precedence.
+            common {
+                # Use standard Kafka configuration properties.
+            }
+            # Standard settings for Kafka consumers. Note that these may be overridden by the demands of individual
+            # subscription types.
+            consumer {
+                # Use standard Kafka consumer configuration properties
+                # https://docs.confluent.io/platform/current/installation/configuration/consumer-configs.html
+            }
+            # Standard settings for Kafka producers. Note that these may be overridden by the demands of individual
+            # subscription types.
+            producer {
+                # Use standard Kafka producer configuration properties
+                # https://docs.confluent.io/platform/current/installation/configuration/producer-configs.html
+            }
         }
         # properties {
             # When DATABASE
