--- a/data/config-schema/src/main/resources/net/corda/schema/configuration/corda.messaging.conf
+++ b/data/config-schema/src/main/resources/net/corda/schema/configuration/corda.messaging.conf
@@ -6,12 +6,28 @@
 # Note that the boot configuration messaging reflects some of this configuration to ensure that configuration updates
 # can be received in the first place.
 
-# Settings for the underlying bus implementation
+# Settings for the underlying bus implementation. These are required to make a connection to the underlying bus
+# implementation.
 bus {
     type = "KAFKA"
     properties {
-        # Properties that should be used for all connections to Kafka
+        # Settings that apply equally to both consumers and producers. These are likely to be security settings which
+        # are similar in both cases. Properties here will be merged into properties in the consumers and producers
+        # blocks. If a property is specified in both, the property in the consumers/producers block takes precedence.
         common {
+            # Use standard Kafka configuration properties.
+        }
+        # Standard settings for Kafka consumers. Note that these may be overridden by the demands of individual
+        # subscription types.
+        consumer {
+            # Use standard Kafka consumer configuration properties
+            # https://docs.confluent.io/platform/current/installation/configuration/consumer-configs.html
+        }
+        # Standard settings for Kafka producers. Note that these may be overridden by the demands of individual
+        # subscription types.
+        producer {
+            # Use standard Kafka producer configuration properties
+            # https://docs.confluent.io/platform/current/installation/configuration/producer-configs.html
         }
     }
     # properties {
