CORE-3210: Explicitly add bootstrap servers and remove the producer/consumer blocks

--- a/data/config-schema/src/main/resources/net/corda/schema/configuration/corda.messaging.conf
+++ b/data/config-schema/src/main/resources/net/corda/schema/configuration/corda.messaging.conf
@@ -11,23 +11,11 @@
 bus {
     type = "KAFKA"
     properties {
-        # Settings that apply equally to both consumers and producers. These are likely to be security settings which
-        # are similar in both cases. Properties here will be merged into properties in the consumers and producers
-        # blocks. If a property is specified in both, the property in the consumers/producers block takes precedence.
+        # Settings that apply to both consumers and producers. These are likely to be connection settings which
+        # are similar in both cases.
         common {
             # Use standard Kafka configuration properties.
-        }
-        # Standard settings for Kafka consumers. Note that these may be overridden by the demands of individual
-        # subscription types.
-        consumer {
-            # Use standard Kafka consumer configuration properties
-            # https://docs.confluent.io/platform/current/installation/configuration/consumer-configs.html
-        }
-        # Standard settings for Kafka producers. Note that these may be overridden by the demands of individual
-        # subscription types.
-        producer {
-            # Use standard Kafka producer configuration properties
-            # https://docs.confluent.io/platform/current/installation/configuration/producer-configs.html
+            bootstrap.servers = "localhost:9092"
         }
     }
     # properties {
