CORE-3210: Highlight that the subscription sections inherit from the common options

--- a/data/config-schema/src/main/resources/net/corda/schema/configuration/corda.messaging.conf
+++ b/data/config-schema/src/main/resources/net/corda/schema/configuration/corda.messaging.conf
@@ -44,35 +44,35 @@ subscription {
         commit.retries = 3
     }
     # Settings to apply to all pubsub subscriptions.
-    pubsub {
+    pubsub = ${common} {
         # No pubsub specific properties as of today, but highlighted here as a placeholder
     }
     # Settings to apply to all compacted subscriptions.
-    compacted {
+    compacted = ${common} {
     }
     # Settings to apply to all durable subscriptions.
-    durable {
+    durable = ${common} {
     }
     # Settings to apply to all state and event subscriptions.
-    stateAndEvent {
+    stateAndEvent = ${common} {
         # Time to wait for an event processor to succeed. This should be set long enough for events to be processed,
         # but not so long that the state topic becomes starved due to a lack of polling activity. Time is in ms.
         processor.timeout = 15000
     }
     # Settings to apply to all event log subscriptions.
-    eventLog {
+    eventLog = ${common} {
     }
     # Settings to apply to all RPC pattern sender-side subscriptions. (Note that this is unrelated to the HTTP RPC
     # mechanism used to interact with the cluster.)
-    rpcSender {
+    rpcSender = ${common} {
     }
     # Settings to apply to all RPC pattern responder-side subscriptions. (Note that this is unrelated to the HTTP RPC
     # mechanism used to interact with the cluster.)
-    rpcResponder {
+    rpcResponder = ${common} {
     }
 }
 # Settings for publishers that write messages to the underlying bus.
 publisher {
-    # Timeout to wait for underlying producers for the publisher
+    # Timeout to wait for underlying producers for the publisher. Time is in ms.
     close.timeout = 600
 }
