CORE-3210: Fix typos

--- a/data/config-schema/src/main/resources/net/corda/schema/configuration/corda.messaging.conf
+++ b/data/config-schema/src/main/resources/net/corda/schema/configuration/corda.messaging.conf
@@ -44,31 +44,31 @@ subscription {
         commit.retries = 3
     }
     # Settings to apply to all pubsub subscriptions.
-    pubsub = ${common} {
+    pubsub = ${subscription.common} {
         # No pubsub specific properties as of today, but highlighted here as a placeholder
     }
     # Settings to apply to all compacted subscriptions.
-    compacted = ${common} {
+    compacted = ${subscription.common} {
     }
     # Settings to apply to all durable subscriptions.
-    durable = ${common} {
+    durable = ${subscription.common} {
     }
     # Settings to apply to all state and event subscriptions.
-    stateAndEvent = ${common} {
+    stateAndEvent = ${subscription.common} {
         # Time to wait for an event processor to succeed. This should be set long enough for events to be processed,
         # but not so long that the state topic becomes starved due to a lack of polling activity. Time is in ms.
         processor.timeout = 15000
     }
     # Settings to apply to all event log subscriptions.
-    eventLog = ${common} {
+    eventLog = ${subscription.common} {
     }
     # Settings to apply to all RPC pattern sender-side subscriptions. (Note that this is unrelated to the HTTP RPC
     # mechanism used to interact with the cluster.)
-    rpcSender = ${common} {
+    rpcSender = ${subscription.common} {
     }
     # Settings to apply to all RPC pattern responder-side subscriptions. (Note that this is unrelated to the HTTP RPC
     # mechanism used to interact with the cluster.)
-    rpcResponder = ${common} {
+    rpcResponder = ${subscription.common} {
     }
 }
 # Settings for publishers that write messages to the underlying bus.
