--- a/build.gradle
+++ b/build.gradle
@@ -254,5 +254,5 @@ tasks.named("dependencyUpdates").configure {
 wrapper {
     gradleVersion = '7.3.2'
     distributionType = Wrapper.DistributionType.BIN
-    distributionUrl="https://services.gradle.org/distributions/gradle-7.3.2-bin.zip"
+    distributionUrl="https://services.gradle.org/distributions/gradle-$gradleVersion-bin.zip"
 }
