--- a/data/config-schema/build.gradle
+++ b/data/config-schema/build.gradle
@@ -13,5 +13,7 @@ dependencies {
 
     compileOnly 'org.osgi:osgi.annotation'
     compileOnly "org.osgi:osgi.core"
+
+    testRuntimeOnly "org.osgi:osgi.core"
 }
 
