put back test dependency

--- a/membership-identity/build.gradle
+++ b/membership-identity/build.gradle
@@ -14,4 +14,6 @@ dependencies {
 
     api project(':base')
     implementation project(":membership")
+
+    testImplementation "org.assertj:assertj-core:$assertjVersion"
 }
