--- a/settings.gradle
+++ b/settings.gradle
@@ -39,6 +39,8 @@ pluginManagement {
     }
 
     plugins {
+        id 'com.gradle.enterprise' version '3.8.1'
+        id 'com.gradle.common-custom-user-data-gradle-plugin' version '1.6.2'
         id 'net.corda.plugins.cordapp-cpk' version gradlePluginsVersion
         id 'org.jetbrains.kotlin.jvm' version kotlinVersion
         id 'org.jetbrains.kotlin.plugin.allopen' version kotlinVersion
@@ -54,7 +56,10 @@ pluginManagement {
         id 'com.github.ben-manes.versions' version gradleVersions
     }
 }
-
+plugins {
+    id 'com.gradle.common-custom-user-data-gradle-plugin'
+    id 'com.gradle.enterprise'
+}
 dependencyResolutionManagement {
     repositories {
         mavenLocal()
@@ -90,6 +95,8 @@ dependencyResolutionManagement {
     }
 }
 
+
+
 rootProject.name = "corda-api"
 
 includeBuild 'cordapp-configuration'
@@ -112,3 +119,20 @@ include 'packaging:test:contract-cpk'
 include 'packaging:test:workflow-cpk'
 include 'persistence'
 include 'serialization'
+
+
+gradleEnterprise {
+    server = gradleEnterpriseUrl
+    allowUntrustedServer = false
+    buildScan {
+        def apiKey = settings.ext.find('CORDA_GRADLE_SCAN_KEY') ?: System.getenv('CORDA_GRADLE_SCAN_KEY')
+        if (apiKey?.trim()) {
+            publishAlways()
+            capture {
+                taskInputFiles = true
+            }
+            uploadInBackground = true // adjust to your CI provider
+            accessKey = apiKey
+        }
+    }
+}
