CORE-4100 minor update set upload in background to false

--- a/settings.gradle
+++ b/settings.gradle
@@ -129,7 +129,7 @@ gradleEnterprise {
             capture {
                 taskInputFiles = true
             }
-            uploadInBackground = true // adjust to your CI provider
+            uploadInBackground = false
             accessKey = apiKey
         }
     }
