--- a/gradle.properties
+++ b/gradle.properties
@@ -62,5 +62,7 @@ bndVersion = 6.2.0
 osgiVersion = 8.0.0
 osgiScrAnnotationVersion = 1.4.0
 
+gradleEnterpriseVersion = 3.8.1
+gradleDataPlugin = 1.6.2
 org.gradle.caching = false
 gradleEnterpriseUrl = https://gradle.dev.r3.com
