--- a/settings.gradle
+++ b/settings.gradle
@@ -39,8 +39,8 @@ pluginManagement {
     }
 
     plugins {
-        id 'com.gradle.enterprise' version '3.8.1'
-        id 'com.gradle.common-custom-user-data-gradle-plugin' version '1.6.2'
+        id 'com.gradle.enterprise' version gradleEnterpriseVersion
+        id 'com.gradle.common-custom-user-data-gradle-plugin' version gradleDataPlugin
         id 'net.corda.plugins.cordapp-cpk' version gradlePluginsVersion
         id 'org.jetbrains.kotlin.jvm' version kotlinVersion
         id 'org.jetbrains.kotlin.plugin.allopen' version kotlinVersion
