--- a/build.gradle
+++ b/build.gradle
@@ -205,7 +205,7 @@ subprojects {
     // we do this to allow for Gradle task caching. OSGI attribute Bnd-LastModified breaks gradle caching as it is a timestamp
     // below block tells Gradle to ignore specifically the Bnd-LastModified attribute of the manifest when checking if
     // a task is up-to-date, this has no impact on publishing or production of jar. NOTE: Skip CPK related testing
-    if (!it.toString().contains(":packaging:test:") {
+    if (!it.toString().contains(":packaging:test:")) {
         normalization {
             runtimeClasspath {
                 metaInf {
