--- a/cordapp-configuration/src/main/resources/net/corda/cordapp/cordapp-configuration.properties
+++ b/cordapp-configuration/src/main/resources/net/corda/cordapp/cordapp-configuration.properties
@@ -7,7 +7,7 @@ Corda-Service-Classes=IMPLEMENTS;net.corda.v5.application.services.CordaService
 Corda-CheckpointCustomSerializer-Classes=IMPLEMENTS;net.corda.v5.serialization.CheckpointCustomSerializer
 Corda-NotaryService-Classes=EXTENDS;net.corda.v5.ledger.notary.NotaryService
 Corda-StateAndRefPostProcessor-Classes=IMPLEMENTS;net.corda.v5.ledger.services.vault.StateAndRefPostProcessor
-Corda-CustomQueryPostProcessor-Classes=IMPLEMENTS;net.corda.v5.application.services.persistence.CustomQueryPostProcessor
+Corda-CustomQueryPostProcessor-Classes=IMPLEMENTS;net.corda.v5.application.persistence.CustomQueryPostProcessor
 Corda-DigestAlgorithmFactory-Classes=IMPLEMENTS;net.corda.v5.cipher.suite.DigestAlgorithmFactory
 
 # Corda should adjust this version over time, as required.
