CORE-5801 Add membership schemas for validation

--- a/corda-api/build.gradle
+++ b/corda-api/build.gradle
@@ -16,8 +16,9 @@ dependencies {
         api project(':crypto-extensions')
         api project(':data:avro-schema')
         api project(':data:config-schema')
-        api project(':data:topic-schema')
         api project(':data:db-schema')
+        api project(':data:membership-schema')
+        api project(':data:topic-schema')
         api project(':ledger:ledger-common')
         api project(':ledger:ledger-consensual')
         api project(':ledger:ledger-utxo')
