--- a/settings.gradle
+++ b/settings.gradle
@@ -96,6 +96,7 @@ include 'crypto-extensions'
 include 'data:avro-schema'
 include 'data:config-schema'
 include 'data:db-schema'
+include 'data:membership-schema'
 include 'data:topic-schema'
 include 'ledger:ledger-common'
 include 'ledger:ledger-consensual'
