NOTICK: update name for clarity

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,7 @@ org.gradle.jvmargs=-XX:MaxMetaspaceSize=2g
 internalPublishVersion = 1.+
 dokkaVersion = 1.6.+
 detektPluginVersion = 1.19.+
-gradleVersions=0.42.+
+dependencyCheckVersion=0.42.+
 artifactoryPluginVersion = 4.28.2
 
 # Logging
