Tidy and extend yaml definitions

--- a/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
@@ -1,16 +1,16 @@
 topics:
   P2PInTopic:
-    name: "p2p.in"
+    name: p2p.in
     consumers:
     producers:
     config:
   P2POutTopic:
-    name: "p2p.out"
+    name: p2p.out
     consumers:
     producers:
     config:
   P2POutMarkerTopic:
-    name: "p2p.out.markers"
+    name: p2p.out.markers
     consumers:
     producers:
     config:
