--- a/data/topic-schema/src/main/resources/net/corda/schema/Crypto.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/Crypto.yaml
@@ -1,4 +1,9 @@
 topics:
+  CryptoEventHSMTopic:
+    name: crypto.event
+    consumers:
+    producers:
+    config:
   CryptoConfigHSMTopic:
     name: crypto.config.hsm
     consumers:
