--- a/cordapp-configuration/src/main/resources/net/corda/cordapp/cordapp-configuration.properties
+++ b/cordapp-configuration/src/main/resources/net/corda/cordapp/cordapp-configuration.properties
@@ -9,6 +9,7 @@ Corda-StateAndRefPostProcessor-Classes=IMPLEMENTS;net.corda.v5.ledger.services.v
 Corda-CustomQueryPostProcessor-Classes=IMPLEMENTS;net.corda.v5.application.persistence.query.CustomQueryPostProcessor
 Corda-DigestAlgorithmFactory-Classes=IMPLEMENTS;net.corda.v5.cipher.suite.DigestAlgorithmFactory
 Corda-Entity-Classes=ANNOTATED;javax.persistence.Entity;ANNOTATED;net.corda.v5.base.annotations.CordaSerializable
+Corda-RPCStartableFlow-Classes=IMPLEMENTS;net.corda.v5.application.flows.RPCStartableFlow
 
 # Corda should adjust this version over time, as required.
 Minimum-Corda-Plugins-Version=6.0.0
