--- a/ledger/common/build.gradle
+++ b/ledger/common/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm'
 }
 
-description 'Corda Ledger - Old'
+description 'Corda Ledger Common'
 
 dependencies {
     api platform(project(':corda-api'))
@@ -24,9 +24,9 @@ dependencies {
     implementation project(":membership")
     implementation project(":serialization")
     implementation project(":persistence")
-    implementation project(":ledger:common")
 
     testImplementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
     testImplementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion"
     testImplementation "org.assertj:assertj-core:$assertjVersion"
 }
+
