CORE-4620: Import certificates API changes

--- a/data/topic-schema/src/main/resources/net/corda/schema/Membership.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/Membership.yaml
@@ -50,3 +50,12 @@ topics:
     consumers:
     producers:
     config:
+  MembershipCertificatesRpcOpsTopic:
+    name: membership.rpc.certificates.ops
+    consumers:
+    producers:
+  MembershipCertificatesRpcOpsRespTopic:
+    name: membership.rpc.certificates.ops.resp
+    consumers:
+    producers:
+    config:
