--- a/cordapp-configuration/src/main/resources/net/corda/cordapp/cordapp-configuration.properties
+++ b/cordapp-configuration/src/main/resources/net/corda/cordapp/cordapp-configuration.properties
@@ -10,6 +10,7 @@ Corda-CustomQueryPostProcessor-Classes=IMPLEMENTS;net.corda.v5.application.persi
 Corda-DigestAlgorithmFactory-Classes=IMPLEMENTS;net.corda.v5.cipher.suite.DigestAlgorithmFactory
 Corda-Entity-Classes=ANNOTATED;javax.persistence.Entity;ANNOTATED;net.corda.v5.base.annotations.CordaSerializable
 Corda-RPCStartableFlow-Classes=IMPLEMENTS;net.corda.v5.application.flows.RPCStartableFlow
+Corda-InitiatedFlow-Classes=IMPLEMENTS;net.corda.v5.application.flows.ResponderFlow
 
 # Corda should adjust this version over time, as required.
 Minimum-Corda-Plugins-Version=6.0.0
