--- a/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/P2P.yaml
@@ -14,11 +14,33 @@ topics:
     consumers:
     producers:
     config:
+  P2POutMarkersDlqTopic:
+    name: p2p.out.markers.dlq
+    consumers:
+    producers:
+    config:
+  P2POutMarkersStateTopic:
+    name: p2p.out.markers.state
+    consumers:
+    producers:
+    config:
+      cleanup.policy: compact
+      segment.ms: 300000
+      delete.retention.ms: 300000
+      min.compaction.lag.ms: 60000
+      max.compaction.lag.ms: 300000
+      min.cleanable.dirty.ratio: 0.5
   P2PHostedIdentitiesTopic:
     name: p2p.hosted.identities
     consumers:
     producers:
     config:
+      cleanup.policy: compact
+      segment.ms: 300000
+      delete.retention.ms: 300000
+      min.compaction.lag.ms: 60000
+      max.compaction.lag.ms: 300000
+      min.cleanable.dirty.ratio: 0.5
   LinkInTopic:
     name: link.in
     consumers:
@@ -34,13 +56,31 @@ topics:
     consumers:
     producers:
     config:
+      cleanup.policy: compact
+      segment.ms: 300000
+      delete.retention.ms: 300000
+      min.compaction.lag.ms: 60000
+      max.compaction.lag.ms: 300000
+      min.cleanable.dirty.ratio: 0.5
   GatewayTLSTruststoresTopic:
     name: gateway.tls.truststores
     consumers:
     producers:
     config:
+      cleanup.policy: compact
+      segment.ms: 300000
+      delete.retention.ms: 300000
+      min.compaction.lag.ms: 60000
+      max.compaction.lag.ms: 300000
+      min.cleanable.dirty.ratio: 0.5
   SessionOutPartitionsTopic:
     name: session.out.partitions
     consumers:
     producers:
     config:
+      cleanup.policy: compact
+      segment.ms: 300000
+      delete.retention.ms: 300000
+      min.compaction.lag.ms: 60000
+      max.compaction.lag.ms: 300000
+      min.cleanable.dirty.ratio: 0.5
