--- a/settings.gradle
+++ b/settings.gradle
@@ -97,6 +97,8 @@ include 'data:config-schema'
 include 'data:db-schema'
 include 'data:topic-schema'
 include 'ledger-obsolete'
+include 'ledger:common'
+include 'ledger:consensual'
 include 'membership'
 include 'persistence'
 include 'serialization'
