--- a/ledger/common/build.gradle
+++ b/ledger/common/build.gradle
@@ -26,3 +26,6 @@ dependencies {
     testImplementation "org.assertj:assertj-core:$assertjVersion"
 }
 
+tasks.named('jar', Jar) {
+    archiveBaseName = 'corda-ledger-common'
+}
