--- a/ledger/consensual/build.gradle
+++ b/ledger/consensual/build.gradle
@@ -27,3 +27,6 @@ dependencies {
     testImplementation "org.assertj:assertj-core:$assertjVersion"
 }
 
+tasks.named('jar', Jar) {
+    archiveBaseName = 'corda-ledger-consensual'
+}
