--- a/gradle.properties
+++ b/gradle.properties
@@ -49,7 +49,7 @@ jacksonVersion = 2.13.1
 # Testing
 assertjVersion = 3.23.+
 junitVersion = 5.8.2
-mockitoVersion = 4.1.0
+mockitoVersion = 4.6.+
 mockitoKotlinVersion = 4.0.0
 
 # OSGi
