define schemas for verification req, resp and add new topic

--- a/data/topic-schema/src/main/resources/net/corda/schema/Membership.yaml
+++ b/data/topic-schema/src/main/resources/net/corda/schema/Membership.yaml
@@ -70,3 +70,8 @@ topics:
     consumers:
     producers:
     config:
+  MembershipVerificationTopic:
+    name: membership.verification
+    consumers:
+    producers:
+    config:
