--- a/settings.gradle
+++ b/settings.gradle
@@ -99,6 +99,7 @@ include 'data:topic-schema'
 include 'ledger-obsolete'
 include 'ledger:ledger-common'
 include 'ledger:ledger-consensual'
+include 'ledger:ledger-utxo'
 include 'membership'
 include 'persistence'
 include 'serialization'
