--- a/crypto/build.gradle
+++ b/crypto/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'corda-api.common-library'
 }
 
+// Modifying to test SNYK Delta - not to be merged
+
 description 'Corda Crypto'
 
 dependencies {
