--- a/data/config-schema/src/main/resources/net/corda/schema/configuration/cryptoLibrary/1.0/hsm-config.json
+++ b/data/config-schema/src/main/resources/net/corda/schema/configuration/cryptoLibrary/1.0/hsm-config.json
@@ -45,6 +45,10 @@
             "UNIQUE"
           ]
         },
+        "masterKeyAlias": {
+          "description": "If the masterKeyPolicy is SHARED then this specifies the alias of the shared key and as such is required",
+          "type": "string"
+        },
         "capacity": {
           "description": "Number of keys which can be handled by the HSM, -1 means unlimited capacity",
           "type": "integer"
@@ -64,20 +68,27 @@
           "items": {
             "type": "object",
             "properties": {
-                "category": {
-                    "description": "Category name, could be the wildcard * meaning all which has to be the last item if used",
-                    "type": "string"                    
-                },
-                "policy": {
-                    "description": "Defines how private keys are generated for that category, ALIASED - stored in the HSM, WRAPPED - wrapped by the HSM, BOTH - decision is taken by the HSM at runtime",
-                    "enum": ["ALIASED", "WRAPPED", "BOTH"]                    
-                }
+              "category": {
+                "description": "Category name, could be the wildcard * meaning all which has to be the last item if used",
+                "type": "string"
+              },
+              "policy": {
+                "description": "Defines how private keys are generated for that category, ALIASED - stored in the HSM, WRAPPED - wrapped by the HSM, BOTH - decision is taken by the HSM at runtime",
+                "enum": [
+                  "ALIASED",
+                  "WRAPPED",
+                  "BOTH"
+                ]
+              }
             },
-            "required": ["category", "policy"],
+            "required": [
+              "category",
+              "policy"
+            ],
             "additionalProperties": false
           }
         },
-        "cfg" : {
+        "cfg": {
           "description": "HSM specific configuration",
           "type": "object",
           "allOf": [
@@ -98,7 +109,10 @@
                     "properties": {
                       "name": {
                         "description": "Map type, CACHING - the key are cached, TRANSIENT - there is no caching",
-                        "enum": ["CACHING", "TRANSIENT"],
+                        "enum": [
+                          "CACHING",
+                          "TRANSIENT"
+                        ],
                         "default": "CACHING"
                       },
                       "cache": {
@@ -129,7 +143,10 @@
                     "properties": {
                       "name": {
                         "description": "Map type, CACHING - the key are cached, TRANSIENT - there is no caching",
-                        "enum": ["CACHING", "TRANSIENT"],
+                        "enum": [
+                          "CACHING",
+                          "TRANSIENT"
+                        ],
                         "default": "CACHING"
                       },
                       "salt": {
@@ -148,11 +165,15 @@
                               }
                             },
                             "additionalProperties": false,
-                            "required": [ "encryptedSecret" ]
+                            "required": [
+                              "encryptedSecret"
+                            ]
                           }
                         },
                         "additionalProperties": false,
-                        "required": [ "configSecret" ]
+                        "required": [
+                          "configSecret"
+                        ]
                       },
                       "cache": {
                         "description": "Settings for the cache if the type is CACHING",
@@ -182,7 +203,10 @@
                     "properties": {
                       "name": {
                         "description": "Wrapping type, DEFAULT - the wrapping key are stored in database, HSM - there is additional single master key defined in the HSM",
-                        "enum": ["DEFAULT", "HSM"],
+                        "enum": [
+                          "DEFAULT",
+                          "HSM"
+                        ],
                         "default": "DEFAULT"
                       },
                       "hsm": {
@@ -217,7 +241,14 @@
           ]
         }
       },
-      "required": ["name", "masterKeyPolicy", "capacity", "supportedSchemes", "cfg"],
+      "required": [
+        "name",
+        "masterKeyPolicy",
+        "capacity",
+        "supportedSchemes",
+        "categories",
+        "cfg"
+      ],
       "additionalProperties": false
     }
   },
